--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "require": {
         "php": ">=5.6.0",
         "topthink/framework": "5.1.*",
-        "upyun/sdk": "^3.3"
+        "upyun/sdk": "^3.3",
+        "topthink/think-captcha": "^2.0",
+        "firebase/php-jwt": "^5.0"
     },
     "autoload": {
         "psr-4": {
