--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "topthink/framework": "5.1.*",
         "upyun/sdk": "^3.3",
         "topthink/think-captcha": "^2.0",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "^5.0",
+        "phpmailer/phpmailer": "^6.0"
     },
     "autoload": {
         "psr-4": {
