--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "upyun/sdk": "^3.3",
         "topthink/think-captcha": "^2.0",
         "firebase/php-jwt": "^5.0",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "qcloudsms/qcloudsms_php": "^0.1.4"
     },
     "autoload": {
         "psr-4": {
